deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: troubleshooter
  namespace: troubleshooter
spec:
  selector:
    app: troubleshooter
  ports:
    - name: http
      port: 80
      targetPort: http
